...
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreoutof"
        app:srcCompat="@drawable/anders" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundededittext"
        android:ems="10"
        android:hint="@string/name"
...
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageofperson" />

    <Button
        android:id="@+id/checkAnswerButton"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/check_answer"
        android:textColor="@color/white"
...
